--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/midnigth@v0.2.0
+# Minima	Минималистичная, чистая, отлично читается	Для серьезных аналитических статей
+# Hacker	В стиле терминала, очень стильно	Для конспирологического вайба
+# Architect	С двумя навигационными панелями	Если статей будет много и нужны категории
+# Midnight	Темная тема, эффектные спецэффекты	Для мистической атмосферы
+# Chirpy	22 цветовые схемы, RSS, комментарии	Для профессионального блога
 plugins:
 - jekyll-remote-theme
