--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/midnigt@v0.2.0 
+remote_theme: pages-themes/midnight@v0.2.0 
 # Minima	Минималистичная, чистая, отлично читается	Для серьезных аналитических статей
 # Hacker	В стиле терминала, очень стильно	Для конспирологического вайба
 # Architect	С двумя навигационными панелями	Если статей будет много и нужны категории
